--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,8 +53,8 @@ dependencies {
     // glide加载图片依赖
 
     implementation 'com.github.bumptech.glide:glide:4.8.0'
-
-
+    //Banner依赖
+    implementation 'com.youth.banner:banner:1.4.10'
 
 
 }
