--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,10 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao'
+
 
 android {
     compileSdkVersion 28
+
     defaultConfig {
         applicationId "com.bw.ymy.zy1"
         minSdkVersion 15
@@ -56,5 +59,19 @@ dependencies {
     //Banner依赖
     implementation 'com.youth.banner:banner:1.4.10'
 
+    implementation 'org.greenrobot:greendao:3.1.1'
+    implementation 'org.greenrobot:greendao-generator:3.1.0'
+    implementation 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+
+
+
+}
+greendao {
+
+    schemaVersion 1
+
+    daoPackage "com.bw.ymy.zy1"
+    targetGenDir "src/main/java"
 
 }
