--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,17 @@ apply plugin: 'org.greenrobot.greendao'
 android {
     compileSdkVersion 28
 
+    configurations.all {
+        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+            def requested = details.requested
+            if (requested.group == 'com.android.support') {
+                if (!requested.name.startsWith("multidex")) {
+                    details.useVersion '28.0.0'//根据你的底下appcompat-v7版本
+                }
+            }
+        }
+    }
+
     defaultConfig {
         applicationId "com.bw.ymy.zy1"
         minSdkVersion 15
@@ -63,6 +74,9 @@ dependencies {
     implementation 'org.greenrobot:greendao-generator:3.1.0'
     implementation 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    //Xre
+    implementation 'com.jcodecraeer:xrecyclerview:1.5.9'
+
 
 
 
